enum CampaignType {
  PHYSICAL
  VIRTUAL
}

enum CampaignStatus {
  PENDING
  ACTIVE
  COMPLETED
  CANCELLED
}

enum CampaignAssetKind {
  IMAGE
  ACCOUNTABILITY_EVIDENCE
}

enum CampaignOperationKind {
  CREATE
  PUBLISH_UPDATE
}

model Campaign {
  id                 String @id @default(ulid())
  organizerProfileId String

  title       String         @db.Text
  description String         @db.Text
  status      CampaignStatus @default(PENDING)
  type        CampaignType

  // Filters (P0)
  category String @db.Text
  region   String @db.Text

  /// Calendar dates interpreted in `America/Sao_Paulo`; no time-of-day is stored.
  startDate DateTime @db.Date
  endDate   DateTime @db.Date

  // PHYSICAL only. Nullability is required for VIRTUAL campaigns; the
  // subtype-specific CHECK constraints are maintained in SQL migrations.
  location     String? @db.Text
  targetItems  Int?
  currentItems Int?

  // VIRTUAL only
  // No amounts are being tracked, since the platform doesn't process payments (that's P3)
  pixKey          String? @db.Text
  bankAccountInfo String? @db.Text

  organizerProfile OrganizerProfile @relation(fields: [organizerProfileId], references: [id], onDelete: Cascade)

  collectionPoints CampaignCollectionPoint[]
  participants     CampaignParticipant[]
  updates          CampaignUpdate[]
  accountability   CampaignAccountability?
  donations        Donation[]
  assets           CampaignAsset[]
  uploadIntents    UploadIntent[]

  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  /// `campaigns_lifecycle_timestamps_check` keeps terminal timestamps aligned with status.
  completedAt DateTime?
  cancelledAt DateTime?

  @@index([status])
  @@index([status, endDate])
  @@index([type])
  @@index([organizerProfileId, createdAt(sort: Desc), id(sort: Desc)])
  @@index([status, startDate(sort: Asc), createdAt(sort: Desc), id(sort: Desc)])
  @@index([status, type, startDate(sort: Asc), createdAt(sort: Desc), id(sort: Desc)])
  @@index([category(ops: raw("gin_trgm_ops"))], type: Gin)
  @@index([region(ops: raw("gin_trgm_ops"))], type: Gin)
  @@map("campaigns")
}

model CampaignCollectionPoint {
  id         String @id @default(ulid())
  campaignId String

  name         String  @db.Text
  address      String  @db.Text
  city         String  @db.Text
  state        String  @db.Text
  zipCode      String  @db.Text
  lat          Float?
  lon          Float?
  instructions String? @db.Text

  campaign Campaign @relation(fields: [campaignId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([campaignId])
  @@map("campaign_collection_points")
}

model CampaignParticipant {
  id         String @id @default(ulid())
  campaignId String
  userId     String

  confirmedAt DateTime?
  cancelledAt DateTime?

  campaign Campaign @relation(fields: [campaignId], references: [id], onDelete: Cascade)
  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([campaignId, userId])
  @@index([campaignId])
  @@index([userId, cancelledAt, confirmedAt(sort: Desc), id(sort: Desc)])
  @@map("campaign_participants")
}

model CampaignUpdate {
  id         String @id @default(ulid())
  campaignId String
  authorId   String

  message     String   @db.Text
  publishedAt DateTime @default(now())

  campaign Campaign @relation(fields: [campaignId], references: [id], onDelete: Cascade)
  author   User     @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@index([campaignId])
  @@map("campaign_updates")
}

// Durable reservations for the state-creating campaign mutations. The result
// ID is allocated before the mutation so an interrupted request can be retried
// without creating a second resource.
model CampaignIdempotencyRecord {
  id                 String               @id @default(ulid())
  operationKey       String               @unique
  requestFingerprint String
  kind               CampaignOperationKind
  actorId            String
  resourceId         String
  expiresAt          DateTime
  createdAt          DateTime             @default(now())

  actor User @relation(fields: [actorId], references: [id], onDelete: Cascade)

  @@index([expiresAt])
  @@index([actorId, kind])
  @@map("campaign_idempotency_records")
}

// Transparency (P0)
model CampaignAccountability {
  id         String @id @default(ulid())
  campaignId String @unique

  // Exactly one total is populated according to the campaign type. Integer
  // cents keep virtual totals exact across database and JSON boundaries.
  totalItems      Int?
  totalAmountCents Int?
  outcomeSummary  String @db.Text
  evidenceAssets  CampaignAsset[]

  submittedAt     DateTime @default(now())
  submittedOnTime Boolean

  campaign Campaign @relation(fields: [campaignId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("campaign_accountabilities")
}

model CampaignAsset {
  id               String            @id
  campaignId       String
  accountabilityId String?
  uploaderId       String
  kind             CampaignAssetKind
  objectKey        String            @unique
  originalFileName String            @db.Text
  contentType      String
  contentLength    Int
  position         Int               @default(0)
  removedAt        DateTime?

  campaign       Campaign                @relation(fields: [campaignId], references: [id], onDelete: Cascade)
  accountability CampaignAccountability? @relation(fields: [accountabilityId], references: [id], onDelete: Cascade)
  uploader       User                    @relation(fields: [uploaderId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([campaignId, kind, removedAt, position])
  @@index([accountabilityId, removedAt, position])
  @@index([uploaderId, removedAt])
  @@map("campaign_assets")
}
